[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "optibatch-swarm"
version = "1.0.0"
description = "OptiBatch Swarm Command Engine"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "pydantic",
    "openenv-core>=0.2.0",
    "openai"
]

[project.scripts]
server = "server.app:main"
